# clang_travis_cmake_gtest_coveralls_example

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  project.h  unit_tests.cpp
